@@ -1,3 +1,7 @@
+2007-09-29 svu
+
+	* tests/test_monitor.c: tracking the config
+
 2007-09-04 svu
 
 	* configure.in: indicate gtkdoc enabling
